# 05-02-Figures-Sides

./: CMakeLists.txt  Figure.cpp  Figure.h  main.cpp
