cmake_minimum_required(VERSION 3.16)

project(05-02-Figures-Sides LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(05-02-Figures-Sides main.cpp)

include(GNUInstallDirs)
install(TARGETS 05-02-Figures-Sides
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
